Added a working version of the Cash Register with radio button options for the test cases. Still missing visible code update.

--- a/style.css
+++ b/style.css
@@ -229,6 +229,42 @@ footer a:hover {
     visibility: hidden;
 }
 
+/* -- CASH CSS -- */
+
+#cash-register {
+    display: none;
+    flex-direction: column;
+}
+
+#cash-code {
+    display: none;
+}
+
+#cash-tests {
+    display: none;
+}
+
+#cash-result {
+    visibility: hidden;
+    text-align: left;
+}
+
+#cash-radio-buttons {
+    text-align: justify;
+}
+
+#cash-radio-buttons input {
+    width: 13px;
+}
+
+#cash-radio-buttons div {
+    margin: 0.5em   ;
+}
+
+#cash-button {
+    margin-top: 1em;
+}
+
 /* -- DESKTOP STYLE -- */
 
 @media only screen and (min-width: 992px) {
