--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ code {
     background-color: #d0d0d5;
     padding: 0.5em;
     text-align: left;
+    word-break: break-all;
 }
 
 .div-code code {
@@ -73,7 +74,7 @@ code {
 
 .div-code p {
     text-align: left;
-    word-break: break-all;
+    /* word-break: break-all; */
 }
 
 .div-code p:first-child {
