Added toUpperCase on the Caesar's Cipher input and conversion to uppercase on the script.

--- a/style.css
+++ b/style.css
@@ -215,6 +215,10 @@ footer a:hover {
     visibility: hidden;
 }
 
+#caesars-input {
+    text-transform: uppercase;
+}
+
 /* -- TELEPHONE CSS -- */
 
 #telephone-number-validator {
